[package]
name = "e621"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteyarn = "0.4.1"
crossbeam-channel = "0.5.11"
csv = { version = "1.3.0", optional = true }
flate2 = { version = "1.0.28", features = ["zlib-ng"], optional = true, default-features = false }
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
strum = { version = "0.26.1", features = ["derive"] }
num-derive = "0.4.2"
num-traits = "0.2.18"
phf_generator = {version="0.11.2", optional=true}
phf_shared = {version="0.11.2", optional=true}
either = "1.10.0"
thiserror = "1.0.57"
winnow = { version = "0.6.5", features = ["unstable-doc"] }

[features]
default = ["load"]
phf = ["dep:phf_shared", "dep:phf_generator"]
load = ["dep:flate2","dep:csv"]
