[package]
name = "vince621-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteyarn = "0.4.1"
hex = { version = "0.4.3" }
serde = { version = "1.0.196", features = ["derive"] }
strum = { version = "0.26.1", features = ["derive"] }
num-derive = "0.4.2"
num-traits = "0.2.18"
phf_generator = {version="0.11.2", optional=true}
phf_shared = {version="0.11.2", optional=true}
either = "1.10.0"
thiserror = "1.0.57"
winnow = { version = "0.6.5", features = ["unstable-doc"] }
time = { version = "0.3.34" }
#rkyv = { version = "0.7.44", features = ["alloc"] }

[features]
phf = ["dep:phf_shared","dep:phf_generator"]
