[package]
name = "vince621-csv"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = { version = "1.3.0" }
serde = { version = "1.0.196", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
flate2 = { version = "1.0.28", features = ["zlib-ng"], default-features = false }
phf_generator = {version="0.11.2", optional=true}
phf_shared = {version="0.11.2", optional=true}
vince621-core.path="../vince621-core"

[features]
phf = ["dep:phf_shared", "dep:phf_generator", "vince621-core/phf"]
