[package]
name = "vince621-serialization"
version = "0.1.0"
edition = "2021"

[dependencies]
vince621-core.path="../vince621-core"
varint-rs = "2.2.0"
num-derive = "0.4.2"
num-traits = "0.2.18"
brotli = "3.4.0"
replace_with = "0.1.7"
byteorder = "1.5.0"
phf_generator = { version = "0.11.2", optional = true }
byteyarn = "0.4.1"

[features]
default=["phf"]
phf=["vince621-core/phf", "dep:phf_generator"]

[lib]
crate-type=["lib"]

[patch.crates-io]
brotli.path="brotli-3.4.0"

[dev-dependencies]
vince621-csv = { path = "../vince621-csv", features=["phf"]}
